--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "eslintConfig": {
-    "extends": ["plugin:react/recommended"],
+    "extends": [
+      "plugin:react/recommended"
+    ],
     "rules": {
       "@typescript-eslint/no-explicit-any": "warn",
       "react/no-unescaped-entities": "warn"
@@ -74,8 +76,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.38.0",
     "eslint-config-next": "15.5.6",
+    "eslint-plugin-react": "^7.37.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
